# Avy-Dawgs-stm32g431kb-template-rs

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
