[package]
name = "stm32g431kb_template"
version = "0.1.0"
edition = "2024"

[dependencies]
stm32g4xx-hal = {git = "https://github.com/stm32-rs/stm32g4xx-hal.git", branch = "main", features = ["stm32g431", "defmt","log-rtt"]}
panic-halt = "0.2.0"
panic-probe = {version = "0.3.0", features = ["print-defmt"]}
panic-itm = "0.4.2"
defmt = "1" 
defmt-rtt = "0.4.0"
cortex-m-rt = "0.7.2"

[profile.dev] 
codegen-units = 1
debug = true 
incremental = false 
lto = false 

[profile.release] 
debug = false 
codegen-units = 1 
incremental = false 
lto = true
